fix: image overflow on mobile

--- a/assets/src/css/screen.scss
+++ b/assets/src/css/screen.scss
@@ -149,6 +149,10 @@ main {
 	.wp-block-query .wp-block-post .wp-block-group {
 		flex-direction: column;
 		width: 100%;
+
+		figure {
+			aspect-ratio: auto !important;
+		}
 	}
 }
 
